@@ -23,11 +23,22 @@ AM_INIT_AUTOMAKE(libast, 0.6)
 AC_DEFINE_UNQUOTED(LIBAST_VERSION, "$VERSION", [Version])
 AM_CONFIG_HEADER(config.h include/libast/sysdefs.h)
 
-LIBTOOLIZE="$SAVE_LIBTOOLIZE"
-AUTOHEADER="$SAVE_AUTOHEADER"
-ACLOCAL="$SAVE_ACLOCAL"
-AUTOMAKE="$SAVE_AUTOMAKE"
-AUTOCONF="$SAVE_AUTOCONF"
+LIBTOOLIZE="${SAVE_LIBTOOLIZE:-true}"
+AUTOHEADER="${SAVE_AUTOHEADER:-true}"
+ACLOCAL="${SAVE_ACLOCAL:-true}"
+AUTOMAKE="${SAVE_AUTOMAKE:-true}"
+AUTOCONF="${SAVE_AUTOCONF:-true}"
+
+AC_MSG_CHECKING(for preferred libtoolize)
+AC_MSG_RESULT($LIBTOOLIZE)
+AC_MSG_CHECKING(for preferred autoheader)
+AC_MSG_RESULT($AUTOHEADER)
+AC_MSG_CHECKING(for preferred aclocal)
+AC_MSG_RESULT($ACLOCAL)
+AC_MSG_CHECKING(for preferred automake)
+AC_MSG_RESULT($AUTOMAKE)
+AC_MSG_CHECKING(for preferred autoconf)
+AC_MSG_RESULT($AUTOCONF)
 
 dnl# Set some basic variables
 AUTHORS="Michael Jennings (mej@eterm.org)"
